--- a/index.html
+++ b/index.html
@@ -7,29 +7,21 @@
 	<title>FUNPERJ</title>
 </head>
 <body>
-	<header>
-		<!-- <img src=""> -->
-		<img class="containerLogo" src="assets/Logo-Funperj.svg">
-		<nav class="containerMenu">
-			<a class="containerMenu-item" href="">Sobre</a>
-			<a class="containerMenu-item" href="">Publicações</a>
-			<a class="containerMenu-item" href="">Filie-se</a>
-			<a class="containerMenu-item" href="">Contato</a>
-		</nav>
-		<!-- <div></div>
-		<div></div>
-		<h1>Federação das Fundações do Estado do Rio de Janeiro</h1>
-		<input type="" name="FILIE-SE">
-		<div>
-			<h1>Sobre nós</h1>
-			<p></p>
-		</div>
-		<div>
-			<img src="">
-			<p>A Federação da Fundações privadas, Associações e das demais Organizações da Sociedade Civil do Estado do Rio de Janeiro - Funperj , instituída em 13 de junho de 1996, é uma sociedade civil sem fins lucrativos que agrega as instituições já elencadas anteriormente assim como todas as Organizações sem fins lucrativos do Estado. Sua missão é apoiar, desenvolver, congregar e representar o Terceiro Setor do Rio de Janeiro tornando visível o papel dessas entidades por meio da atuação política e geração de conhecimento, resgatando a liderança do Estado neste segmento. A Funperj reuniu de forma pioneira as Organizações do Terceiro Setor e hoje, reconstruindo a Federação, pretende-se desenvolver novas estratégias visando o reforço à cidadania e o fortalecimento do segmento que representa. Fazem parte de seu cadastro de associadas fundações das mais expressivas na história do país, que movimentam valores significativos, atendem a milhões de beneficiários, representam o esforço da própria sociedade civil na oferta de serviços públicos relevantes com atividades inovadoras e continuadas. Algumas afiliadas são internacionalmente reconhecidas, algumas são centenárias, a maioria é referência em suas áreas de atuação.</p>
-		</div> -->
-	</header>
 	<main>
+		<footer class="rodapé">
+			<lu class="lu">
+				<li><a href="#">Contato</a></li>
+				<li><a href="#">FunpeRJ</a></li>
+				<li><a href="#">Federação das fundações e associações do Rio de Janeiro</a></li>
+				<li><a href="#">Rua Senador Dantas,20/15º,Centro Rio de Janeiro-RJ</a></li>
+				<li><a href="#">TEL:(21) 2240-9808</a></li>
+				<li><a href="#">FACE:/funperj</a></li>
+				<li><a href="#">Sobre</a></li>
+				<li><a href="#">Publicações</a></li>
+				<li><a href="#">Filie-se</a></li>b
+				<li><a href="#">Contato</a></li>
+			</lu>
+		</footer>
 		<div class="Desenho1"></div>
 		<div class="Desenho2"></div>
 	</main>
