--- a/index.html
+++ b/index.html
@@ -7,23 +7,36 @@
 	<title>FUNPERJ</title>
 </head>
 <body>
-	<main>
-		<footer class="rodapé">
-			<lu class="lu">
-				<li><a href="#">Contato</a></li>
-				<li><a href="#">FunpeRJ</a></li>
-				<li><a href="#">Federação das fundações e associações do Rio de Janeiro</a></li>
-				<li><a href="#">Rua Senador Dantas,20/15º,Centro Rio de Janeiro-RJ</a></li>
-				<li><a href="#">TEL:(21) 2240-9808</a></li>
-				<li><a href="#">FACE:/funperj</a></li>
-				<li><a href="#">Sobre</a></li>
-				<li><a href="#">Publicações</a></li>
-				<li><a href="#">Filie-se</a></li>b
-				<li><a href="#">Contato</a></li>
-			</lu>
-		</footer>
-		<div class="Desenho1"></div>
-		<div class="Desenho2"></div>
-	</main>
+		
+		<!-- <div class="Desenho2"></div> -->
+	<footer class="rodapé">
+		<div class="parceiros">
+			<h1 class="parceiros-footer">PARCEIROS</h1>
+			<!-- <div class="Desenho1"></div> -->
+			<img class="parceiros-img"src="assets/projeto2.png">
+			<img class="parceiros-img"src="assets/projeto7.png">
+			<img class="parceiros-img"src="assets/projeto6.png">
+			<img class="parceiros-img"src="assets/projeto3.png">
+			<img class="parceiros-img"src="assets/projeto4.png">
+			<im  class="parceiros-img"src="assets/projeto5.png">
+		</div>
+		<div class="contatos">
+			<div class="caixa-h1">
+				<h1>Contato</h1>
+			</div>
+				<h3 class="paragrafo" >FunpeRJ</h3>
+				<p class="paragrafo" >Federação das fundações e associações do Rio de Janeiro</p>
+				<p class="paragrafo" >Rua Senador Dantas,20/15º,Centro Rio de Janeiro-RJ</p>
+				<p class="paragrafo" > <img src="assets/tell.svg">(21) 2240-9808</p>
+				<p class="paragrafo" > <img src="assets/face.svg">/funperj</p>
+			<div class="caixa-link">
+				<a class="paragrafo-link" href="">Sobre</a>
+				<a class="paragrafo-link" href="">Publicações</a>
+				<a class="paragrafo-link" href="">Filie-se</a>
+				<a class="paragrafo-link" href="">Contato</a>
+			</div>
+			
+		</div>	
+	</footer>
 </body>
 </html>
