--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
 </head>
 <body>
 		
-		<!-- <div class="Desenho2"></div> -->
 	<footer class="rodapé">
 		<div class="parceiros">
 			<h1 class="parceiros-footer">PARCEIROS</h1>
-			<!-- <div class="Desenho1"></div> -->
 			<img class="parceiros-img"src="assets/projeto2.png">
 			<img class="parceiros-img"src="assets/projeto7.png">
 			<img class="parceiros-img"src="assets/projeto6.png">
 			<img class="parceiros-img"src="assets/projeto3.png">
 			<img class="parceiros-img"src="assets/projeto4.png">
-			<im  class="parceiros-img"src="assets/projeto5.png">
+			<img class="parceiros-img"src="assets/projeto5.png">
 		</div>
 		<div class="contatos">
-			<div class="caixa-h1">
-				<h1>Contato</h1>
-			</div>
+				<h1 class="caixa-h1">Contato</h1>
+			<div class="caixa1">
 				<h3 class="paragrafo" >FunpeRJ</h3>
-				<p class="paragrafo" >Federação das fundações e associações do Rio de Janeiro</p>
-				<p class="paragrafo" >Rua Senador Dantas,20/15º,Centro Rio de Janeiro-RJ</p>
+				<p class="paragrafo" >Federação das Fundações e <br> Associações do Rio de Janeiro</p>
+				<p class="paragrafo" >Rua Senador Dantas,20/15º,Centro <br> Rio de Janeiro-RJ</p>
 				<p class="paragrafo" > <img src="assets/tell.svg">(21) 2240-9808</p>
 				<p class="paragrafo" > <img src="assets/face.svg">/funperj</p>
+			</div>
 			<div class="caixa-link">
 				<a class="paragrafo-link" href="">Sobre</a>
 				<a class="paragrafo-link" href="">Publicações</a>
