--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		
 	<footer class="rodapé">
 		<div class="parceiros">
-			<h1 class="parceiros-footer">PARCEIROS</h1>
+			<div class="caixa-contato">
+				<h1 class="parceiros-footer">Parceiros</h1>
+			</div>
 			<img class="parceiros-img"src="assets/projeto2.png">
 			<img class="parceiros-img"src="assets/projeto7.png">
 			<img class="parceiros-img"src="assets/projeto6.png">
@@ -21,7 +23,7 @@
 		<div class="contatos">
 				<h1 class="caixa-h1">Contato</h1>
 			<div class="caixa1">
-				<h3 class="paragrafo" >FunpeRJ</h3>
+				<h3 class="paragrafo-h3" >FunpeRJ</h3>
 				<p class="paragrafo" >Federação das Fundações e <br> Associações do Rio de Janeiro</p>
 				<p class="paragrafo" >Rua Senador Dantas,20/15º,Centro <br> Rio de Janeiro-RJ</p>
 				<p class="paragrafo" > <img src="assets/tell.svg">(21) 2240-9808</p>
