--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<h3 class="paragrafo-h3" >FunpeRJ</h3>
 				<p class="paragrafo" >Federação das Fundações e <br> Associações do Rio de Janeiro</p>
 				<p class="paragrafo" >Rua Senador Dantas,20/15º,Centro <br> Rio de Janeiro-RJ</p>
-				<p class="paragrafo" > <img src="assets/tell.svg">(21) 2240-9808</p>
-				<p class="paragrafo" > <img src="assets/face.svg">/funperj</p>
+				<p class="paragrafo-tel" > <img src="assets/tell.svg">(21) 2240-9808</p>
+				<p class="paragrafo-face" > <img src="assets/face.svg">/funperj</p>
 			</div>
 			<div class="caixa-link">
 				<a class="paragrafo-link" href="">Sobre</a>
